[package]
name = "flox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
mimalloc = { version = "*", default-features = false }
rustc-hash = "1.1.0"

[profile.release]
codegen-units=1
debug=true
strip=false

[profile.optimized]
inherits="release"
debug=false
strip=true
panic="abort"
codegen-units=1
lto="fat"
incremental=false
